--- a/src/app/category/category-edit/category-edit.component.html
+++ b/src/app/category/category-edit/category-edit.component.html
@@ -2,12 +2,8 @@
 <form [formGroup]="categoryForm" (ngSubmit)="updateCategory(id)">
   <table>
     <tr>
-      <td>Mã danh mục:</td>
-      <td><input type="number" formControlName="id"></td>
-    </tr>
-    <tr>
       <td>Tên danh mục:</td>
-      <td><input type="text" formControlName="name"></td>
+      <td [formGroup]="categoryForm"><input type="text" formControlName="categoryName"></td>
     </tr>
     <tr>
       <td></td>
