--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -8,7 +8,7 @@
   </tr>
   <tr *ngFor="let category of categories; index as i">
     <td>{{i + 1}}</td>
-    <td>{{category.name}}</td>
+    <td>{{category.categoryName}}</td>
     <td><a [routerLink]="['/category/edit',category.id]">Edit</a></td>
     <td><a [routerLink]="['/category/delete',category.id]">Delete</a></td>
   </tr>
